[package]
name = "dungenon"
version = "0.4.0"
authors = ["VoxWave <victor_bankowski@hotmail.com>"]
edition = "2018"

[dependencies]
rand = "0.6"
nalgebra = "0.17"
rayon = "0.8"
smallvec = "0.3"
# poisson = "0.9"
alga = "0.8.2"

[dependencies.kolli-desu]
git = "https://github.com/WaDelma/kolli-desu.git"

[dependencies.poisson]
git = "https://github.com/WaDelma/poisson.git"

[workspace]
members = ["demos/pinter"]
